// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell snapshot: conflict state 1`] = `
<View
  accessibilityLabel="cell value 5"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "#CCCCCC",
        "borderRightWidth": 1,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#FFADAD",
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        },
        {
          "color": "#3D5AFE",
        },
      ]
    }
  >
    5
  </Text>
</View>
`;

exports[`Cell snapshot: empty selected cell with same-line highlight 1`] = `
<View
  accessibilityLabel="cell value 0"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "#CCCCCC",
        "borderRightWidth": 1,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#FFE066",
      },
      {
        "borderBottomWidth": 3,
        "borderColor": "#141414",
        "borderRightWidth": 3,
        "borderWidth": 3,
      },
    ]
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "height": 32,
        "width": 32,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 9,
            "fontWeight": "600",
          },
          {
            "color": "#9AA0AB",
            "height": 10,
            "textAlign": "center",
            "width": 10,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 9,
            "fontWeight": "600",
          },
          {
            "color": "#9AA0AB",
            "height": 10,
            "textAlign": "center",
            "width": 10,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 9,
            "fontWeight": "600",
          },
          {
            "color": "#9AA0AB",
            "height": 10,
            "textAlign": "center",
            "width": 10,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 9,
            "fontWeight": "600",
          },
          {
            "color": "#9AA0AB",
            "height": 10,
            "textAlign": "center",
            "width": 10,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 9,
            "fontWeight": "600",
          },
          {
            "color": "#9AA0AB",
            "height": 10,
            "textAlign": "center",
            "width": 10,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 9,
            "fontWeight": "600",
          },
          {
            "color": "#9AA0AB",
            "height": 10,
            "textAlign": "center",
            "width": 10,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 9,
            "fontWeight": "600",
          },
          {
            "color": "#9AA0AB",
            "height": 10,
            "textAlign": "center",
            "width": 10,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 9,
            "fontWeight": "600",
          },
          {
            "color": "#9AA0AB",
            "height": 10,
            "textAlign": "center",
            "width": 10,
          },
        ]
      }
    />
    <Text
      style={
        [
          {
            "fontSize": 9,
            "fontWeight": "600",
          },
          {
            "color": "#9AA0AB",
            "height": 10,
            "textAlign": "center",
            "width": 10,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Cell snapshot: value=7 1`] = `
<View
  accessibilityLabel="cell value 7"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "#CCCCCC",
        "borderRightWidth": 1,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
      false,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 22,
          "fontWeight": "800",
          "letterSpacing": -0.5,
        },
        {
          "color": "#3D5AFE",
        },
      ]
    }
  >
    7
  </Text>
</View>
`;
